--- a/src/Questions.properties
+++ b/src/Questions.properties
@@ -7,14 +7,20 @@ Automation:
 2.What	is	cross	browser	testing	and	parallel	testing?
 - Ability to test in multiple browsers and parallel testing is testing something simotainiusly.
 3.Challenges	faced	during	selenium	testing?
-
+- main challanges are exeptions handling, locators keep changing
 4.What	is	Actions	class?
+Action class is used for advance mouse movement, contextClick, hoverover etc..scrolling on WebPage
 5.How	to	handle	drop	down	in	selenium?
+Dropdown is selenium handled with Select Class
 6.How	to	handle	multiple	browser	pop	up?
+multyBrowserpup ups are handled by driver.getWindowHandle and driver.getWindowHandles
 7.How	to	handle	multiple	browser	tabs	in	selenium?
-8.How	to	perform	upload	file	using	selenium?
+8.How	to	perform	upload	file	using	selenium? 
+by passing path of the file  creating File object: File  srs = new File ("C\: filePath.xlsx"); 
 9.How	to	perform	download	file	using	selenium?
+if download click is available by clicking download
 10.How	to	get	all	values	of	dropdown	in	selenium?
+dropdowns are selected by using Select Class   
 11.How	to	perform	(control	+	a)	through	selenium?
 12.How	to	shift	between	tabs	of	a	same	browser	using	selenium?
 13.What	is	Robot	class?
